# 111

HM-master/: .gitlab-ci.yml  CMakeLists.txt  Makefile
HM-master/cfg/: encoder_intra_main_rext_subsample.cfg  encoder_lowdelay_P_main10.cfg  encoder_lowdelay_main.cfg  encoder_lowdelay_main10.cfg  encoder_lowdelay_main_rext.cfg  encoder_randomaccess_main.cfg  encoder_randomaccess_main10.cfg  encoder_randomaccess_main_rext.cfg
HM-master/cfg/hbd/: 12-bit.cfg  16-bit.cfg  hbd.cfg
HM-master/cfg/lossless/: lossless.cfg
HM-master/cfg/per-class/: classH1.cfg  classH2.cfg
HM-master/cfg/per-sequence-HDR/: H1_BalloonFestival.cfg  H1_Cosmos1_TreeTrunk.cfg  H1_EBU_Hurdles.cfg  H1_EBU_Starting.cfg  H1_Market.cfg  H1_ShowGirl.cfg  H1_SunRise.cfg
HM-master/cfg/sei/annotated_regions/: anno_reg_0.txt  anno_reg_1.txt  anno_reg_2.txt  anno_reg_3.txt  anno_reg_4.txt
HM-master/doc/: Doxyfile  README_software-manual.md  mainpage.h  software-manual.tex
HM-master/source/App/Parcat/: parcat.cpp
HM-master/source/App/SEIFilmGrainApp/: CMakeLists.txt  SEIFilmGrainApp.cpp  SEIFilmGrainApp.h  SEIFilmGrainAppCfg.cpp  SEIFilmGrainAppCfg.h  SEIFilmGrainMain.cpp
HM-master/source/App/SEIRemovalApp/: SEIRemovalApp.cpp  SEIRemovalApp.h  SEIRemovalAppCfg.cpp  SEIRemovalAppCfg.h  seiremovalmain.cpp
HM-master/source/App/TAppDecoder/: TAppDecCfg.cpp  TAppDecCfg.h  TAppDecTop.cpp  TAppDecTop.h  decmain.cpp
HM-master/source/App/TAppEncoder/: TAppEncCfg.cpp  TAppEncCfg.h  TAppEncTop.cpp  TAppEncTop.h  encmain.cpp
HM-master/source/App/TAppMCTSExtractor/: TAppMctsExtCfg.cpp  TAppMctsExtCfg.h  TAppMctsExtTop.cpp  TAppMctsExtTop.h  mctsExtmain.cpp
HM-master/source/App/utils/: annexBbytecount.cpp  cabac_block_demo.cpp  cabac_coeff_blocks_demo.cpp  cabac_residual_block.cpp  convert_NtoMbit_YCbCr.cpp
HM-master/source/Lib/TLibCommon/: AccessUnit.h  CommonDef.h  ContextModel.cpp  ContextModel.h  ContextModel3DBuffer.cpp  ContextModel3DBuffer.h  ContextTables.h  Debug.cpp  Debug.h  NAL.h  ProfileLevelTierFeatures.cpp  ProfileLevelTierFeatures.h  SEI.cpp  SEI.h  SEIFilmGrainAnalyzer.cpp  SEIFilmGrainSynthesizer.cpp  SEIFilmGrainSynthesizer.h  TComBitCounter.h  TComBitStream.cpp  TComBitStream.h  TComCABACTables.cpp  TComCABACTables.h  TComChromaFormat.cpp  TComChromaFormat.h  TComDataCU.h  (+41 more)
(+87 files in other folders)
